[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/entities/car/car_texture.png" type="Texture" id=1]
[ext_resource path="res://game/entities/car/car.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0
height = 24.0

[node name="Car" type="Area2D" groups=["car"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CarTexture" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sensors" type="Node2D" parent="."]

[node name="1" type="RayCast2D" parent="Sensors"]
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="2" type="RayCast2D" parent="Sensors"]
rotation = 0.174533
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="3" type="RayCast2D" parent="Sensors"]
rotation = 0.349066
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="4" type="RayCast2D" parent="Sensors"]
rotation = 1.0472
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="5" type="RayCast2D" parent="Sensors"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="6" type="RayCast2D" parent="Sensors"]
rotation = -0.174533
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="7" type="RayCast2D" parent="Sensors"]
rotation = -0.349066
enabled = true
cast_to = Vector2( 100, 0 )
collide_with_areas = true

[node name="FitnessReward" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Car_area_entered"]
[connection signal="timeout" from="FitnessReward" to="." method="_on_FitnessReward_timeout"]
